package Message.Server.Battle.Protocol.B2BM;
message MSG_B2BM_HEARTBEAT {
	required int32 serverId =  1;
	required int32 subId =  2;
}

message MSG_B2BM_REGISTER {
	required int32 areaId =  1;
	required int32 serverId =  2;
	required int32 subId =  3;
}

