package Message.Server.BattleManager.Protocol.BM2B;
message MSG_BM2B_HEARTBEAT {
	required int32 serverId =  1;
	required int32 subId =  2;
}

message MSG_BM2B_RETRUN_REGISTER {
	required int32 areaId =  1;
	required int32 serverId =  2;
	required int32 subId = 3;
	required string msg = 4;
}

